--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-    "format_version": 2,
-    "header": {
-        "description": "Example vanilla resource pack",
-        "name": "Vanilla Resource Pack",
-        "uuid": "66c6e9a8-3093-462a-9c36-dbb052165822",
-        "version": [0, 0, 1],
-        "min_engine_version": [ 1, 21, 90 ]
+    "format_version":2,
+    "header":{
+        "description":"",
+        "name":"Oaf's 8x8 (WIP)",
+        "uuid":"97494632-db0d-479d-b90e-5cdd120bbe6e",
+        "version":[0,0,1],
+        "min_engine_version":[1,21,90]
     },
-    "modules": [
+    "modules":[
         {
-            "description": "Example vanilla resource pack",
-            "type": "resources",
-            "uuid": "743f6949-53be-44b6-b326-398005028819",
-            "version": [0, 0, 1]
+            "description":"Oaf's 8x8 resource pack",
+            "type":"resources",
+            "uuid":"f4548d01-01ed-41e3-986e-5a6df3be24fb",
+            "version":[0,0,1]
         }
     ]
 }
